fix(layout): avoid sticky header gap (#11644)

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -355,7 +355,8 @@ sup.new {
 
 .sticky-header-container {
   position: sticky;
-  top: 0;
+  // Avoid gap on certain zoom levels.
+  top: -1px;
   z-index: var(--z-index-main-header);
 }
 
